fix: Prevent the library label from being collapsed (#7579)

--- a/packages/excalidraw/components/Sidebar/SidebarTrigger.scss
+++ b/packages/excalidraw/components/Sidebar/SidebarTrigger.scss
@@ -29,6 +29,7 @@
 
   .default-sidebar-trigger .sidebar-trigger__label {
     display: block;
+    white-space: nowrap;
   }
 
   &.excalidraw--mobile .default-sidebar-trigger .sidebar-trigger__label {
